add about image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
     <!-- Photo -->
     <div class="about-photo">
-      <img src="about.jpg" alt="Bhavani Ponnada Photo">
+      <img src="about1.jpg" alt="Bhavani Ponnada Photo">
     </div>
     
     <!-- Content -->
