After add image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     
     <!-- Photo -->
     <div class="about-photo">
-      <img src="about1.jpg" alt="Bhavani Ponnada Photo">
+    <!--  <img src="about1.jpg" alt="Bhavani Ponnada Photo">-->
+            <img src="about2.jpg" alt="Bhavani Ponnada Photo">
+
     </div>
     
     <!-- Content -->
@@ -352,7 +354,7 @@
   <p>📧 <a href="mailto:bhavaniponnada2105@gmail.com">bhavaniponnada2105@gmail.com</a> | 
      📞 8978359022 | 
      🔗 <a href="https://www.linkedin.com/in/bhavaniponnada2105" target="_blank">LinkedIn</a> | 
-     💻 <a href="https://github.com/bhavani2105/Micro-IT-Internship" target="_blank">GitHub</a>
+     💻 <a href="https://github.com/bhavani2105" target="_blank">GitHub</a>
   </p>
   <p>© 2025 Bhavani Ponnada | Portfolio</p>
 </footer>
